--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-/********** Template CSS **********/
+/************ Template CSS **********/
 :root {
     --primary: #6222CC;
     --secondary: #FBA504;
